3.04.12 (12-20-2006)
Reduced ammeter size.
Moved switches to be in front of other components (Except for selected components.)

3.04.11 (12-18-2006)
Removed phetcommon tab, which was used for testing purposes.
Clicking on the background de-selects the highlighted element (if any).
Fixed: Connected wires look as if there is a gap between the copper part of the wires.
Fixed: When dragging a junction in a connected circuit, there becomes a gap in the electron flow 2 components away.
Fixed: When adjusting a voltage or resistance continuously with a slider, the circuit doesn't update until stopped dragging.
Fixed: "Show Connection at Right" for bulb turns the bulb upside-down.
Fixed: Bulb left/right directions are backwards.
Converted "show values" checkbox to a pair of buttons (on control panel).
Fixed: Sometimes readout is still displayed after its component is deleted.
Fixed: Bulb rays are grabbable.
Fixed: Zoom in/out incorrectly translates the play area.
Fixed: Zoom in/out makes it possible to lose the voltmeter.
Fixed: Number of significant digits in slider is different from on-component readout.
Fixed: Virtual Ammeter doesn't update unless dragged.
Fixed: AC Voltage source is off by a factor of 5.
Fixed: AC Edit dialogs are initialized incorrectly.
Renamed "Frequency" to "Change Frequency" in AC Voltage Source menu.
Renamed "Edit Capacitance" to "Change Capacitance" in capacitor menu.
Renamed "Edit Inductance" to "Change Inductance" in inductor menu.
Removed Zoom handler.
Voltage Strip chart probes now work correctly at different zoom levels.
Fixed: Capacitor reads ohms instead of Farads.
Fixed: Battery voltage editor has incorrect behavior when switching to larger range & back.
Fixed: Capacitor editor initialized to wrong value.
Fixed: Inductor reads ohms instead of Henries.
Bugs fixed in 3.04.09 bug report [1-12, 14-15, 18, 21-24, 27, 30, 36]
Bugs recommended but skipped [16, 26, 32, 33]  

3.04.10 (12-12-2006)
Added a launch file for DC Only version.
