@@ -1,6 +1,7 @@
 3.04.12 (12-20-2006)
 Reduced ammeter size.
 Moved switches to be in front of other components (Except for selected components.)
+Improved title font for component editors.
 
 3.04.11 (12-18-2006)
 Removed phetcommon tab, which was used for testing purposes.
